--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,12 +3,15 @@ name: Build EXE with PyInstaller
 on:
   push:
     tags:
-      - 'v*'   # 当你推送标签 v1.0.0 时触发
+      - 'v*'   # 推送标签时触发，例如 v1.0.0
   workflow_dispatch: # 手动触发
 
 jobs:
   build-windows:
     runs-on: windows-latest
+    strategy:
+      matrix:
+        arch: [x64, x86]   # 同时构建 64 位和 32 位
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -17,6 +20,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          architecture: ${{ matrix.arch }}
 
       - name: Install dependencies
         run: |
@@ -26,10 +30,12 @@ jobs:
 
       - name: Build EXE
         run: |
-          pyinstaller --noconsole --windowed --name "国考数据清洗工具" --icon icon.ico excel_gui6.py
+          pyinstaller --noconsole --windowed ^
+            --name "国考数据清洗工具-${{ matrix.arch }}" ^
+            --icon icon.ico excel_gui6.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: exe-build
+          name: exe-build-${{ matrix.arch }}
           path: dist/*
