--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,23 @@
-name: Build EXE with PyInstaller
+name: Build_64 EXE with PyInstaller
 
 on:
   push:
     tags:
-      - 'v*'
-  workflow_dispatch:
+      - 'v*'   # 推送 v1.0.0 这样的标签时触发
+  workflow_dispatch: # 手动触发
 
 jobs:
   build-windows:
     runs-on: windows-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python (64-bit)
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-          architecture: 'x64'   # 强制 64位
+          python-version: '3.10'   # PyQt6 需要 Python 3.8+
 
       - name: Install dependencies
         run: |
@@ -25,12 +25,8 @@ jobs:
           pip install pyinstaller
           pip install -r requirements.txt
 
-      - name: Build EXE (onefile)
-        run: |
-          pyinstaller --onefile --windowed --noconsole ^
-            --name "国考数据清洗工具" ^
-            --icon icon.ico ^
-            excel_gui6.py
+      - name: Build EXE
+        run: pyinstaller --onefile --windowed --noconsole --name "国考数据清洗工具_64bit" --icon icon.ico excel_gui6.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
