--- a/.github/workflows/build32.yml
+++ b/.github/workflows/build32.yml
@@ -1,14 +1,15 @@
-name: Build_32 EXE with PyInstaller
+name: Build 32bit EXE with PyInstaller
 
 on:
   push:
     tags:
-      - 'v*'
-  workflow_dispatch:
+      - 'v*'   # 推送 v1.0.0 这样的标签时触发
+  workflow_dispatch: # 手动触发
 
 jobs:
-  build-windows:
+  build-windows-32bit:
     runs-on: windows-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -17,7 +18,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          architecture: 'x86'   # ✅ 强制使用 32 位 Python
+          architecture: x86   # 👈 关键：强制安装 32位 Python
 
       - name: Install dependencies
         run: |
@@ -26,8 +27,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Build EXE
-        run: |
-          pyinstaller --noconsole --windowed --name "国考数据清洗工具_32bit" --icon icon.ico excel_gui6.py
+        run: pyinstaller --onefile --windowed --noconsole --name "国考数据清洗工具_32bit" --icon icon.ico excel_gui5.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
