--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-# 通用依赖
+# 打包工具（指定兼容版）
 pyinstaller==5.13.2
-pyqt5==5.15.11
 
-# 数据处理依赖
-pandas==1.1.5
-numpy==1.19.3
+# GUI（PyQt6 兼容 32 位）
+pyqt6==6.4.0
 
-# 其他依赖
-openpyxl==3.0.10
-xlrd==1.2.0
+# 数据处理（最后支持 32 位的稳定版本）
+pandas==1.5.3
+numpy==1.24.4
 
-
-
+# Excel 处理
+openpyxl==3.1.2
