--- a/.github/workflows/build32.yml
+++ b/.github/workflows/build32.yml
@@ -1,33 +1,32 @@
-name: Build 32bit EXE with PyInstaller
+name: Build_32bit_EXE
 
 on:
   push:
     tags:
       - 'v*'   # 推送 v1.0.0 这样的标签时触发
-  workflow_dispatch: # 手动触发
+  workflow_dispatch: # 允许手动触发
 
 jobs:
-  build-windows-32bit:
+  build-windows-32:
     runs-on: windows-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up 32-bit Python
+      - name: Set up Python (32-bit)
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          architecture: x86   # 👈 关键：强制安装 32位 Python
+          architecture: 'x86'   # ⚠️ 关键：强制使用 32 位 Python
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller
           pip install -r requirements.txt
 
-      - name: Build EXE
-        run: pyinstaller --noconsole --windowed --name "国考数据清洗工具" --icon icon.ico --hidden-import=numpy.core._multiarray_umath --hidden-import=numpy.core._dtype_ctypes --hidden-import=numpy.core._methods --hidden-import=numpy.lib.format excel_gui6.py
+      - name: Build EXE (32-bit)
+        run: pyinstaller --onefile --windowed --noconsole --name "国考数据清洗工具_32bit" --icon icon.ico --hidden-import=numpy.core._multiarray_umath --hidden-import=numpy.core._dtype_ctypes --hidden-import=numpy.core._methods --hidden-import=numpy.lib.format excel_gui7.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
