--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-# 打包工具（指定兼容版）
+# 打包工具
 pyinstaller==5.13.2
 
-# GUI（PyQt6 兼容 32 位）
-pyqt6==6.4.0
+# GUI（PyQt5 支持 32 位）
+pyqt5==5.15.11
 
 # 数据处理（最后支持 32 位的稳定版本）
 pandas==1.5.3
